about added, and index modified

--- a/index.html
+++ b/index.html
@@ -4,7 +4,22 @@
   </title>
 </head>
 <body>
+  <h1>
+    This is my page, yes it is
+  </h1>
   <p>
-    This is my page
+    Git is fun
   </p>
+  <p>
+    What is a hunk?
+  </p>
+
+
+
+  <footer>
+    This is the footer.
+  </footer>
+
+
+  <!-- ending the file with a little comment -->
 </body>
