added TODO, modified index and .gitignore

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     This is my page, yes it is
   </h1>
   <p>
-    Git is fun
+    This is now feature1. Nothing by feature1
   </p>
   <p>
     What is a hunk?
