added some feature

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <body>
-  <p> I'm all about looove </p>
-  <p> Yes I am </p>
+  <p> Some crazy feature implemented </p>
   <p> I'm just doing crazy stuff now </p>
+  <p> Another wild feature </p>
 </body>
