--- a/about.html
+++ b/about.html
@@ -1,5 +1,9 @@
 <body>
-  <p> I'm all about looove </p>
+  <h1> I AM AWESOME </h1>
   <p> Yes I am </p>
-  <p> I'm just doing crazy stuff now </p>
+  <li>
+    <ul>1</ul>
+    <ul>2</ul>
+    <ul>3</ul>
+  </li>
 </body>
