--- a/about.html
+++ b/about.html
@@ -1,7 +1,6 @@
 <body>
-  <h1> I AM AWESOME </h1>
-  <p> Some crazy feature implemented </p>
-  <p> I'm just doing crazy stuff now </p>
+  <p> Some crazy feature implemented2 </p>
   <p> Another wild feature </p>
   <p> Yes I am </p>
+  <h2> fun stuff </h2>
 </body>
