--- a/about.html
+++ b/about.html
@@ -1,7 +1,8 @@
 <body>
-  <h1> I AM AWESOME </h1>
+  <h3> I AM AWESOME </h3>
   <p> Some crazy feature implemented </p>
   <p> I'm just doing crazy stuff now </p>
   <p> Another wild feature </p>
   <p> Yes I am </p>
+  <p> New stuff </p>
 </body>
